project/test/semantics/unit/good/input/Good20_shouldEvaluateLocalVariablesAndTheirSetters.ty
singleton class LocalVariables {
    
    actions: {
        main: () -> Void = {
            var count: Int = 0;
            var result: Int = 1;
            
            while (count < 10) {
                local#count(count + 1)
                local#result(result * 2)
            }
            
            System#assertEquals(1024, result)
        }
    }
}
